--- a/index.html
+++ b/index.html
@@ -251,13 +251,13 @@
         <div class="grid">
             <div class="card" data-aos="fade-up">
                 <img src="images/STEMCATS.png" alt="STEMCATS" class="card-image">
-                <h2><a href="https://udify.app/chat/na6PqufcVIZU52Br">STEM CATS</a></h2>
+                <h2><a href="https://cstemlab.github.io/STEMCATS/">STEM CATS</a></h2>
                 <p>STEM Across the Curriculum and the Society</p>
             </div>
 
             <div class="card" data-aos="fade-up">
                 <img src="images/DTEDU.png" alt="DTEDU" class="card-image">
-                <h2><a href="https://udify.app/chat/na6PqufcVIZU52Br">Design Thinking & Education</a></h2>
+                <h2><a href="https://www.google.com.hk/">Design Thinking & Education</a></h2>
                 <p>Design Thinking and Education</p>
             </div>
             
